# template_project

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  erase.sh  rename.sh
.github/workflows/: linux.yml  release.yml
LICENSES/: xxhash-BSD-2-Clause license
cmake/: ccache.cmake  compiler_definitions.cmake  compiler_options.cmake  options.cmake  package.cmake  print_info.cmake
cmake/modules/: FindGMP.cmake  FindMPFR.cmake  FindRE2.cmake  FindURING.cmake
src/: CMakeLists.txt  a.html  asio_coro.cpp  gen.cpp  locale.cpp  main.cpp  main_gui.cpp  template_project.cpp  template_project_gui.cpp  test.cpp
src/common/: CMakeLists.txt
src/common/include/common/: common.h  error_code.h  error_code.hpp
src/common/include/template_project/: .gitignore  base64.hpp  common.hpp  default_init_allocator.hpp  error_code.hpp  flatbuffers.hpp  hash.hpp  log.hpp
src/common/include/template_project/common/: atomic.hpp  base64.hpp  common.hpp  default_init_allocator.hpp  error_code.hpp  file.hpp  flatbuffers.hpp  hash.hpp  literals.hpp  log.hpp  string_convert.hpp
src/common/src/: base64.cpp  error_code.cpp  file.cpp  flatbuffers.cpp  log.cpp
src/gui/: CMakeLists.txt
src/gui/include/gui/: gui.hpp
src/gui/include/template_project/gui/: Label.hpp  MainWindow.hpp  gui.hpp
src/gui/src/: gui.cpp
src/my_basic_library/: CMakeLists.txt
src/my_basic_library/src/: bacic.cpp
src/test_lib/: CMakeLists.txt
src/test_lib/include/template_project/: multiprecision.hpp
src/test_lib/include/template_project/test_lib/: multiprecision.hpp
src/test_lib/include/test_lib/: multiprecision.hpp
src/test_lib/src/: multiprecision.cpp
src/util/: CMakeLists.txt
src/util/include/template_project/: flatbuffers.hpp
src/util/include/util/: base64.h  flatbuffers.h  hash.h  log.h  log.hpp
src/util/src/: base64.cpp  flatbuffers.cpp  hash.cpp  log.cpp
tests/: CMakeLists.txt  main_test.cpp
tests/common/: CMakeLists.txt  common_test.cpp
